readme and plop changes

--- a/plop-templates/Component/Component.js.hbs
+++ b/plop-templates/Component/Component.js.hbs
@@ -1,9 +1,12 @@
 import React from 'react';
-import styles from './{{pascalCase name}}.scss';
+import useStyles from './style';
 
 const {{pascalCase name}} = props => {
+
+    const classes = useStyles();
+
     return (
-        <div className={styles.main}>
+        <div>
             {{pascalCase name}}
         </div>
     );
